--- a/app/src/main/res/layout/scrollview.xml
+++ b/app/src/main/res/layout/scrollview.xml
@@ -79,7 +79,7 @@
             app:layout_constraintStart_toEndOf="@id/patchapps"
             app:layout_constraintTop_toTopOf="@id/toapp_button" />
 
-        <Button
+<!--        <Button
             android:id="@+id/nospeed"
             style="@style/ButtonStyle"
             android:layout_width="0dp"
@@ -106,7 +106,7 @@
             app:layout_constraintStart_toEndOf="@id/patchapps"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/nospeed"
-            app:layout_constraintBottom_toBottomOf="@id/nospeed"/>
+            app:layout_constraintBottom_toBottomOf="@id/nospeed"/>-->
 
         <Button
             android:id="@+id/taplimit"
@@ -119,7 +119,7 @@
             android:text="@string/disable_speed_limitations"
             app:layout_constraintEnd_toEndOf="@id/patchapps"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/nospeed" />
+            app:layout_constraintTop_toBottomOf="@id/toapp_button" />
 
         <ImageView
             android:id="@+id/sixtapstatus"
